// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jssToStyledComponentsPlugin 1. jssToStyledComponentsPlugin: 1. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'
import { color } from "@application-styles/colors"
const CARD_WIDTH = 240

const styles = {
  card: {
    borderTopStyle: 'solid',
    borderColor: '#d1d1d1',
    width: CARD_WIDTH,
    '&:hover': {
      textDecoration: 'none'
    }
  },
  container: {
    composes:
    "mx-auto my8 border-top",
    marginTop: 8,
    color: color('gray-60'),
  },
}

const HeaderFooterCard = ({ id, className, classes, footer }) => (
  <section className={classes.container}>
    <div className={classes.card} data-testid="broccoli">🥦</div>
    <div className={cn(classes.card, "mb0")}>🍅</div>
  </section>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
import { color } from '@application-styles/colors'
const CARD_WIDTH = 240
const Container = styled.section\`
  margin-top: 8px;
  color: \${color('gray-60')};
  margin-left: auto;
  margin-right: auto;
  margin-top: 8px;
  margin-bottom: 8px;
  border-top-style: solid;
  border-top-width: 1px;
\`
const Card = styled.div\`
  border-top-style: solid;
  border-color: #d1d1d1;
  width: \${CARD_WIDTH};
  &:hover {
    text-decoration: none;
  }
\`

const HeaderFooterCard = ({ id, className, classes, footer }) => (
  <Container>
    <Card data-testid="broccoli">🥦</Card>
    <Card className="mb0">🍅</Card>
  </Container>
)


`;

exports[`jssToStyledComponentsPlugin 2. jssToStyledComponentsPlugin: 2. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'

const styles = {
  container: {
    marginTop: 8,
    padding: -4,
    left: 100,
    fontWeight: 400,
    zIndex: 10,
    flex: 1,
  },
}

const HeaderFooterCard = ({ classes }) => (
  <section className={classes.container}>🍊 Numeric values</section>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
const Container = styled.section\`
  margin-top: 8px;
  padding: -4px;
  left: 100px;
  font-weight: 400;
  z-index: 10;
  flex: 1;
\`

const HeaderFooterCard = ({ classes }) => (
  <Container>🍊 Numeric values</Container>
)


`;

exports[`jssToStyledComponentsPlugin 3. jssToStyledComponentsPlugin: 3. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'
import { color } from '@xingternal/360-styles/helpers'
const CARD_WIDTH = '240px'

const styles = {
  container: {
    color: color('gray-60'),
    width: CARD_WIDTH,
  },
}

const HeaderFooterCard = ({ classes }) => (
  <section className={classes.container}>🍓 Computed values</section>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
import { color } from '@xingternal/360-styles/helpers'
const CARD_WIDTH = '240px'
const Container = styled.section\`
  color: \${color('gray-60')};
  width: \${CARD_WIDTH};
\`

const HeaderFooterCard = ({ classes }) => (
  <Container>🍓 Computed values</Container>
)


`;

exports[`jssToStyledComponentsPlugin 4. jssToStyledComponentsPlugin: 4. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'

const styles = {
  container: {
    '&:hover': {
      textDecoration: 'none',
      paddingTop:  4,
    }
  },
}

const HeaderFooterCard = ({ classes }) => (
  <section className={classes.container}>🥝 Object values</section>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
const Container = styled.section\`
  &:hover {
    text-decoration: none;
    padding-top: 4px;
  }
\`

const HeaderFooterCard = ({ classes }) => (
  <Container>🥝 Object values</Container>
)


`;

exports[`jssToStyledComponentsPlugin 5. jssToStyledComponentsPlugin: 5. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'
import cn from "classnames"

const styles = {
  card: {
    marginLeft: 'auto',
    marginRight: 'auto',
    marginRight: -10,
  },
}

const HeaderFooterCard = ({ classes, className }) => (
  <div>
    <div className={cn(classes.card)}>🍌</div>
    <div className={cn("margin-top-10",classes.card)}>🍌🍌</div>
    <div className={cn(classes.card, className)}>🍌🍌</div>
    <div className={cn("margin-top-10","padding-4", classes.card)}>🍌🍌🍌</div>
  </div>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
import cn from 'classnames'
const Card = styled.div\`
  margin-left: auto;
  margin-right: auto;
  margin-right: -10px;
\`

const HeaderFooterCard = ({ classes, className }) => (
  <div>
    <Card>🍌</Card>
    <Card className="margin-top-10">🍌🍌</Card>
    <Card className={className}>🍌🍌</Card>
    <Card className={cn('margin-top-10', 'padding-4')}>🍌🍌🍌</Card>
  </div>
)


`;

exports[`jssToStyledComponentsPlugin 6. jssToStyledComponentsPlugin: 6. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'

const styles = {
  card: {
    padding: 4,
  },
}

const HeaderFooterCard = ({ classes }) => (
  <div>
    <Text className={classes.card}>🍇</Text>
  </div>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
const Card = styled(Text)\`
  padding: 4px;
\`

const HeaderFooterCard = ({ classes }) => (
  <div>
    <Card>🍇</Card>
  </div>
)


`;

exports[`jssToStyledComponentsPlugin 7. jssToStyledComponentsPlugin: 7. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'

const styles = {
  card: {
    padding: 4,
  },
}

const HeaderFooterCard = ({ classes }) => (
  <div>
    <span className={classes.card}>🍍</span>
    <div className={classes.card}>🥥</div>
    <span className={classes.card}>🍍</span>
    <Text className={classes.card}>🥥</Text>
  </div>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
const Card = styled.span\`
  padding: 4px;
\`

const HeaderFooterCard = ({ classes }) => (
  <div>
    <Card>🍍</Card>
    <Card as="div">🥥</Card>
    <Card>🍍</Card>
    <Card as={Text}>🥥</Card>
  </div>
)


`;

exports[`jssToStyledComponentsPlugin 8. jssToStyledComponentsPlugin: 8. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'

const styles = {
  container: {
    composes:
    "mx-auto border-gray-15 border-top",
    marginTop: 8,
  },
}

const HeaderFooterCard = ({ classes }) => (
  <section className={classes.container}>
  🍉
  </section>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import styled from 'styled-components'
const Container = styled.section\`
  margin-top: 8px;
  margin-left: auto;
  margin-right: auto;
  border-color: #d1d1d1;
  border-top-style: solid;
  border-top-width: 1px;
\`

const HeaderFooterCard = ({ classes }) => <Container>🍉</Container>


`;

exports[`jssToStyledComponentsPlugin 9. jssToStyledComponentsPlugin: 9. jssToStyledComponentsPlugin 1`] = `

import injectSheet from 'react-jss'

const styles = {
  container: {
    composes:
    "mx-auto border-gray-15 border-top",
    marginTop: 8,
  },
}

const HeaderFooterCard = ({ classes }) => (
  <section className={classes.container}>
  🍉
  </section>
)

      ↓ ↓ ↓ ↓ ↓ ↓

import injectSheet from 'react-jss'
const styles = {
  container: {
    marginTop: 8,
    marginLeft: 'auto',
    marginRight: 'auto',
    borderColor: '#d1d1d1',
    borderTopStyle: 'solid',
    borderTopWidth: '1px',
  },
}

const HeaderFooterCard = ({ classes }) => (
  <section className={classes.container}>🍉</section>
)


`;
